[package]
name = "sentinel"
version = "0.1.0"
authors = ["Michael de Silva <michael@inertialbox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "^0.9"
glob = "^0.3.0"
hyper = "^0.13.4"
hyper-tls = "^0.4.1"
serde_json = "^1.0"
rustc-serialize = "^0.3"
futures = "^0.3.4"
tokio = { version = "0.2.20", features = ["full"] }
getopts = "^0.2.19"
indicatif = "^0.13.0"
once_cell = "^1.3.1"
mysql = "^18.2.0"